--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<div class="col-4 col-11-narrower row-1">
 
 							<section class="box special">
-								<span class="image featured"><img src="images/me.jpg" alt="" /></span>
+								<span class="image featured"><img src="me.jpg" alt="" /></span>
 							<p></p> Hi, I am Tisa. <br> My pronouns are she/her/hers.
 							</section>
 
@@ -48,7 +48,7 @@
                 framework through computational simulations, and refining the theoretical models to better reflect the observed data.
               </p>
 							<p></p>
-							<p><a href="mailto:mokounkova@pasadena.edu">Email me</a></p>
+							<p><a href="mailto:tisabiswas21@gmail.com">Email me</a></p>
 							</section>
 
 						</div>
