--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
               <p> Previously, I pursued my PhD in High Energy Physics at the University of Calcutta, in the city of Kolkata where I live and love. 
                </p> 
               <p> As a researcher, I am involved in looking for new physics phenomena. My focus is to study and interpret the unexplained data, predict what the data could signify from a particular theoretical 
-                framework through computational simulations, and refining the theoretical models to better reflect the observed data.
+                framework through computational simulations, and refining the theoretical models to better reflect the observed data. This is achieved by the application of Quantum Field Theory computations to 
+		      predict observable events at experimental setups, such as the Large Hadron Collider at CERN, employing Monte Carlo methods.
               </p>
 							<p></p>
 							<p><a href="mailto:tisabiswas21@gmail.com">Email me</a></p>
