--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 							<section class="box special">
 							<p></p>
-							<p> I am a postdoc in High Energy Physiscs at Indian Institute of Technology 
+							<p> I am a postdoc in High Energy Physiscs at Indian Institute of Technology, Kanpur 
                 in Kanpur, India. I am passionate about inclusive and welcoming teaching and mentorship, and increasing diversity in physics, quantum field theory, and particle physics phenomenology. 
               </p>
               <p> Previously, I pursued my PhD in High Energy Physics at the University of Calcutta, in the city of Kolkata where I live and love. 
